Offset anchors by 40px to fix bug where search scrolled too far (results were getting hidden under menu bar)

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -218,6 +218,12 @@ h6 {
   padding-top: 62px;
   margin-top: -62px;
 }
+
+.anchor-fix-2 {
+  padding-top: 40px;
+  margin-top: -40px;
+}
+
 .spacer-0 {
   margin-top: 0px;
 }
